--- a/styles/globals.css
+++ b/styles/globals.css
@@ -21,6 +21,12 @@ a {
   box-sizing: border-box;
 }
 
+.login {
+  height: 100%;
+  display: flex;
+  align-items: center;
+}
+
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
